# qidian

./: .gitignore  LICENSE  MEMO.md  QidianBot.py  QidianWeChat.py  README.en.md  README.md  full_tests.py  graph_rag_test.py  load_graph_rag.py  load_naive_rag.py  pyproject.toml
data/: 西游记.md
experimental/: itick_k线.py  llm_templates.py
experimental/agent/langraph/: human_in_the_loop.py  meeting.py  react_agent.py
experimental/agent/smol/: multiagent.py
experimental/fastmcp/: client.py  readme.md  simple_calculator.py
experimental/human_in_the_loop/: expense_approval.py  readme.md
experimental/wxbot/: chat.py  demo.py  llm.py
models/: llm_templates.py  modelbase.py  models_config.py
models/agent/: smol_codeagent.py
models/llm/: doubao.py  nateshmbhat.py  zhipu.py
models/mcp/: react_agent.py
models/rag/: graph_rag.py  naive_rag.py  ragbase.py
resources/: gradio-config.json  models_config.json  templates.json
scripts/: cog_server.py
tests/: test_code_agent.py
utils/: batch_processing.py  decorators.py  helpers.py  hg_embeddings.py
