[project]
name = "uvai"
version = "0.1.0"
description = "Qidian AI Demo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types>=0.7.0",
    "arxiv>=2.2.0",
    "beautifulsoup4>=4.13.4",
    "chromadb==1.0.12",
    "dashscope>=1.23.3",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.0.2",
    "fastmcp>=2.5.2",
    "filetype>=1.2.0",
    "flatbuffers>=25.2.10",
    "google-search-results>=2.4.2",
    "gradio==5.32.0",
    "hf-xet>=1.1.2",
    "ipython>=9.2.0",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-core==0.3.63",
    "langchain-deepseek>=0.1.3",
    "langchain-experimental>=0.3.4",
    "langchain-mcp-adapters==0.1.4",
    "langchain-neo4j>=0.4.0",
    "langchain-tavily>=0.2.0",
    "langgraph>=0.4.7",
    "litellm>=1.71.2",
    "markdownify>=1.1.0",
    "matplotlib>=3.10.3",
    "mcp[cli]==1.9.2",
    "numpy==2.2.6",
    "openai==1.82.1",
    "pip>=25.1.1",
    "pyttsx3>=2.98",
    "qianfan>=0.4.12.3",
    "redis>=6.1.0",
    "sentence-transformers>=4.1.0",
    "smolagents>=1.16.1",
    "tavily-python>=0.7.3",
    "wikipedia>=1.4.0",
    "wxauto>=3.9.11.17.5",
    "zhipuai>=2.1.5.20250421",
]

[project.optional-dependencies]
litellm = [
    "smolagents>=1.16.1",
]
[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
